exports[`info get node fields 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fields": Array [],
        "isNode": false,
        "name": "field1",
      },
    ],
    "isNode": false,
    "name": "model1",
  },
]
`;

exports[`info get query connection fields simple 1`] = `
Array [
  Object {
    "fields": Array [],
    "isNode": false,
    "name": "name",
  },
]
`;

exports[`info get query connection fields with fragments 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fields": Array [
          Object {
            "fields": Array [
              Object {
                "fields": Array [],
                "isNode": false,
                "name": "hasNextPage",
                "type": "Boolean",
              },
            ],
            "isNode": false,
            "name": "pageInfo",
            "type": "Model1ConnectionPageInfo",
          },
          Object {
            "fields": Array [
              Object {
                "fields": Array [
                  Object {
                    "fields": Array [],
                    "isNode": false,
                    "name": "field1",
                    "type": "String",
                  },
                  Object {
                    "fields": Array [
                      Object {
                        "fields": Array [],
                        "isNode": false,
                        "name": "field2",
                        "type": "Int",
                      },
                    ],
                    "isNode": true,
                    "name": "model2",
                    "type": "Model2",
                  },
                ],
                "isNode": true,
                "name": "node",
                "type": "Model1",
              },
            ],
            "isNode": false,
            "name": "edges",
            "type": "[Model1ConnectionEdge]!",
          },
        ],
        "isNode": false,
        "name": "model1",
        "type": "Model1Connection",
      },
    ],
    "isNode": true,
    "name": "viewer",
    "type": "Viewer",
  },
]
`;

exports[`info get query connection fields with fragments 2`] = `
Array [
  Object {
    "fields": Array [],
    "isNode": false,
    "name": "field1",
    "type": "String",
  },
  Object {
    "fields": Array [
      Object {
        "fields": Array [],
        "isNode": false,
        "name": "field2",
        "type": "Int",
      },
    ],
    "isNode": true,
    "name": "model2",
    "type": "Model2",
  },
]
`;

exports[`info get query one fields 1`] = `
Array [
  Object {
    "fields": Array [],
    "isNode": false,
    "name": "field1",
  },
  Object {
    "fields": Array [
      Object {
        "fields": Array [],
        "isNode": false,
        "name": "field2",
      },
    ],
    "isNode": false,
    "name": "model2",
  },
]
`;

exports[`info parse all fields 1`] = `
Array [
  Object {
    "fields": Array [
      Object {
        "fields": Array [
          Object {
            "fields": Array [],
            "isNode": false,
            "name": "field1",
          },
        ],
        "isNode": false,
        "name": "model1",
      },
      Object {
        "fields": Array [
          Object {
            "fields": Array [],
            "isNode": false,
            "name": "field2",
          },
        ],
        "isNode": false,
        "name": "model2",
      },
    ],
    "isNode": false,
    "name": "node",
  },
]
`;

exports[`info simple query 1`] = `
Array [
  Object {
    "fields": Array [],
    "isNode": false,
    "name": "test",
    "type": "String",
  },
]
`;
